--- a/object_detection_app/templates/upload.html
+++ b/object_detection_app/templates/upload.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>Object Detection API</title>
+    <title>Fashion Object Detection Web Client</title>
+    <h1>by Viktor Pot<\h1>
     <link rel='shortcut icon' href='favicon.ico'/>
 
     <script language="javascript" type="text/javascript">
